fixed off center button

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body {margin: 0;}
 #button {
 
   left: 50%;
-  margin-left: -50px;
+  margin-left: -5vh;
 
     position: fixed;
     bottom: 10%;
